[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "aws_s3_common"
version = "1.0.0"
authors = [
  { name="Rob Svirskas", email="svirskasr@hhmi.org" },
]
description = "Library of common AWS S3functions for Python"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["boto3",
                "botocore"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JaneliaSciComp/aws_s3_common"
